# flow-expansion

./: .gitignore  README.md  pyproject.toml  setup.py  tutorial.ipynb
configs/: W1.yaml  entropy_KL.yaml  example_fe.yaml  sd.yaml  sd_fdc.yaml  sd_fdc_single.yaml  sd_fdc_slurm.yaml  sd_gen.yaml  sd_lik.yaml  slurm_config.yaml  toy.yaml  toy_fdc.yaml
configs/hydra/launcher/: slurm.yaml  slurm_a100_40g.yaml  slurm_a100_80g.yaml
notebooks/: testing_flows.ipynb  testing_graph.ipynb  tutorial_fdc.ipynb
scripts/: W1.py  cuda_test.py  entropy.py  entropy_KL.py  generate_images.py  stable_diffusion_exp.py  stable_diffusion_exp_fdc.py  toy_experiment.py  train_diffusion.py
src/genexp/: __init__.py  likelihood.py  metrics.py  plotting.py  sd_utils.py
src/genexp/base_models/: __init__.py  trimodal_gmm.py
src/genexp/trainers/: adjoint_matching.py  alm.py  augmented_reward.py  flow_expander.py  flow_expander_AL.py  genexp.py  renyi_functional.py  renyi_or_operator.py
tests/: test_adjoint_matching.py  test_parameterizations.py  test_workflow.py
